# miditk-smf

./: .flake8  .gitignore  CHANGELOG.md  CHANGELOG.rst  LICENSE.md  LICENSE.rst  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: publish-to-test-pypi.yml
docs/: Makefile  api.rst  conf.py  index.rst  make.bat
examples/: example_drumpattern.py  example_midisequence.py  example_minimal.py  example_print_channel_0.py  example_printing_handler.py  example_program_change.py  example_transpose.py  example_type1to0.py  gmtokurzweil.csv  note_remapper.py
miditk/: __init__.py
miditk/common/: __init__.py  constants.py
miditk/smf/: __init__.py  _speedups.pyx  api.py  converters.py  parser.py  reader.py  release.py  sequence.py  version.py  writer.py
miditk/smf/scripts/: __init__.py  mid2syx.py
requirements/: dev.txt
tests/: __init__.py  profile_miditoobject.py  test_converters.py  test_midifilewriter.py  test_miditotext.py
tests/testoutput/: minimal_type0.mid
